# xuangu

./: .gitignore  README.md
data-pipeline/: INDUSTRIAL_PLAN.md  README.md  ai_veto.py  broker.py  build_universe.py  collect.py  datastore.py  diagnose.py  fib_engine.py  fib_scan.py  gen_icon.py  gen_report.py  micro_ab.py  monitor.py  paper_trade.py  quality_ab.py  regime.py  regime_ab.py  requirements.txt  run_all.py  run_daily.py  run_diag.py  run_fib.py  schedule_daily.ps1  schedule_quant.ps1  strategy.py  test_engine.py  walkforward.py  watchlist.json
docs/: AI智能选股舆情系统_全景研究报告.html  A股舆情分析模块_实施规划.html  智能选股舆情终端_PRD.html  智能选股舆情终端_PRD_v2.html
polaris-app/: .dockerignore  .env.example  .gitattributes  .gitignore  .tmp-drive.py  DEPLOY-SYNOLOGY.md  DOCKER.md  Dockerfile  README.md  docker-compose.synology.yml  docker-compose.yml  docker-entrypoint.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
polaris-app/src-tauri/: Cargo.toml  build.rs  tauri.bundle-python.conf.json  tauri.conf.json  tauri.macbuild.conf.json
polaris-app/src-tauri/assets/: feishu_bridge.mjs  feishu_bridge_package.json  wecom-aibot-sdk.umd.min.js
polaris-app/src-tauri/capabilities/: default.json
polaris-app/src-tauri/crates/polaris-core/: Cargo.toml
polaris-app/src-tauri/crates/polaris-core/src/: lib.rs
polaris-app/src-tauri/crates/polaris-sandbox/: Cargo.toml
polaris-app/src-tauri/crates/polaris-sandbox/src/: commands.rs  e2b.rs  lib.rs
polaris-app/src-tauri/crates/polaris-sandbox/src/templates/: Dockerfile.sandbox
polaris-app/src-tauri/icons/: icon.icns
polaris-app/src-tauri/resources/seed-kb/毛主席/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/1.毛泽东选集/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/1.毛泽东选集/第1卷/: 中国革命战争的战略问题.md  关心群众生活，注意工作方法.md
polaris-app/src-tauri/resources/seed-kb/毛主席/1.毛泽东选集/第2卷/: 为动员一切力量争取抗战胜利而斗争.md  向国民党的十点要求.md  国共合作成立后的迫切任务.md
polaris-app/src-tauri/resources/seed-kb/毛主席/1.毛泽东选集/第3卷/: 必须学会做经济工作.md
polaris-app/src-tauri/resources/seed-kb/毛主席/2.毛泽东全集/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/3.诗词/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/4.演讲与谈话/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/5.书信/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/6.批示与题词/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/7.军事著作/: README.md
polaris-app/src-tauri/resources/seed-kb/毛主席/8.文革文献/: README.md
polaris-app/src-tauri/src/: accounts.rs  chat.rs  claude_md.rs  codex_proxy.rs  conv.rs  convert.rs  doctor.rs  feishu.rs  forge.rs  forge_pptx.rs  forge_tts.rs  forge_video.rs  host.rs  infer.rs  kb.rs  lib.rs  main.rs  persona.rs  project.rs  provider.rs  sentio.rs  server.rs  skills.rs  updater.rs  wecom.rs
polaris-app/src-tauri/src/templates/: identity.md  kb_claude.md  mao_persona_claude.md  project_claude.md  wiki_index.md
polaris-app/src-tauri/src/templates/personas/: content-summarizer.md  content-writer.md  health-interpreter.md  lesson-planner.md  pet-care.md  stock-expert.md
polaris-app/src-tauri/src/templates/skills/: cloak-browser.md  community-engagement.md  consult-mao.md  content-analytics-report.md  deep-research.md  edge-tts.md  gz-notion-infographic.md  gz-wechat-article-writer.md  harness-practices.md  hot-topic-radar.md  hyperframes.md  image-gen.md  pdf.md  pptx.md  skill-creator.md  web-search.md  web-video-presentation-guide.md  wechat-pipeline.md  xhs-mao-pipeline.md  xiaohongshu-pipeline.md  xlsx.md
polaris-app/src-tauri/src/templates/skills/polaris-deck-studio/: LICENSE  SKILL.md
polaris-app/src-tauri/src/templates/skills/polaris-deck-studio/assets/: base.css  runtime.js  themes.css
polaris-app/src-tauri/src/templates/skills/polaris-deck-studio/scripts/: export-pptx.mjs  install-deps.mjs
polaris-app/src-tauri/src/templates/skills/polaris-deck-studio/templates/: deck.html
polaris-app/src-tauri/src/templates/skills/polaris-story-video/: SKILL.md  manifest.json
polaris-app/src-tauri/src/templates/skills/polaris-story-video/references/: STORYBOARD.md
polaris-app/src-tauri/src/templates/skills/polaris-story-video/scripts/: compose.mjs  install-deps.mjs  minimax-image.mjs  minimax-tts.mjs  run.mjs
polaris-app/src-tauri/src/templates/skills/polaris-video-studio/: SKILL.md  manifest.json
polaris-app/src-tauri/src/templates/skills/polaris-video-studio/references/: WORKFLOW.md
polaris-app/src-tauri/src/templates/skills/polaris-video-studio/scripts/: install-deps.mjs  run.mjs
polaris-app/src-tauri/src/templates/skills/polaris-video-studio/scripts/pipeline/: 03-record.mjs
polaris-app/src-tauri/src/templates/skills/polaris-web-studio/: LICENSE  SKILL.md
polaris-app/src-tauri/src/templates/skills/polaris-web-studio/assets/: runtime.js  site.css
polaris-app/src-tauri/src/templates/skills/polaris-web-studio/templates/: site.html
polaris-app/src-tauri/src/templates/skills/web-video-presentation/: addendum.md  bootstrap.mjs  minimax-tts.mjs  scaffold.mjs
polaris-app/src-tauri/src/templates/skills/wechat-md-typesetter/: SKILL.md
polaris-app/src-tauri/src/templates/skills/wechat-md-typesetter/scripts/: wechat_yiban.py
(+460 files in other folders)
